--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,8 @@ a {
     line-height: 1.25;
     margin-left: 25px;
 }
-.news-text p {
+.news-text p,
+.news-text2 {
     color: #505050;
     font-weight: 500;
     margin-top: 0;
@@ -875,6 +876,7 @@ input[type="submit"]:hover {
         text-align: left;
         padding: 28px 10px;
         padding-right: 0;
+        width: 100%;
     }
     .news-item a {
         gap: 0;
@@ -889,6 +891,15 @@ input[type="submit"]:hover {
         margin-left: 0;
     }
     .news-text p {
+        font-size: 1.6rem;
+        width: 100%;
+        font-weight: 500;
+        line-height: 1.5;
+        margin: 0;
+        margin-top: 6px;
+        padding-right: 10.5px;
+    }
+    .news-text2 p {
         font-size: 1.6rem;
         width: 100%;
         font-weight: 500;
